--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "minor": "npm version minor && npm publish && git push origin",
+    "patch": "npm version patch && npm publish && git push origin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
