--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "air-schema",
   "version": "0.2.2",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.mjs",
+  "type": "module",
   "scripts": {
     "minor": "npm version minor && npm publish && git push origin",
     "patch": "npm version patch && npm publish && git push origin",
@@ -17,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/artifishional/air-schema/issues"
   },
-  "homepage": "https://github.com/artifishional/air-schema#readme"
+  "homepage": "https://github.com/artifishional/air-schema#readme",
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.20.0"
+  }
 }
